# argus-git-demo

./: Makefile  README.md  meson.build
include/: colors.h  git_types.h  mock_data.h  output_utils.h  stash_utils.h  validation_utils.h
include/commands/: git.h  remote.h  stash.h
src/: main.c  mock_data.c  output_utils.c  stash_utils.c  validation_utils.c
src/commands/: add.c  branch.c  checkout.c  commit.c  config.c  fetch.c  init.c  log.c  meson.build  pull.c  push.c  status.c  switch.c
src/commands/remote/: meson.build  remote.c  remote_add.c  remote_get_url.c  remote_prune.c  remote_remove.c  remote_rename.c  remote_set_url.c  remote_show.c
src/commands/stash/: meson.build  stash.c  stash_apply.c  stash_branch.c  stash_clear.c  stash_drop.c  stash_list.c  stash_pop.c  stash_push.c  stash_show.c  stash_utils.c
subprojects/: argus.wrap
